late: fix breaking visibility indicators

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -432,6 +432,12 @@ span.twitter-typeahead {
     float: left;
   }
 
+  .paper-visibility {
+    float: left;
+    margin-left: 0.25em;
+    margin-top: 0.25em;
+  }
+
   .meta {
     color: #AAA;
     margin-left: 1.7em;
